--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Henry Saver",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "ip": "^1.1.8"
   }
